# py-kids

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: tests.yml
hours/hour01/: exercises.py  solutions.md  test.py  theory.md
