[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-kids"
version = "0.1.0"
description = "Обучающий проект по Python для ребенка"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["hours"]

[tool.pytest.ini_options]
testpaths = ["hours"]
python_files = "test.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--tb=short"
